# gijsovergoor-site

./: .gitignore  CNAME  README.md  pyproject.toml
.github/workflows/: pages.yml
config/: site.yaml
content/: bio.md  job-market.md
data/public/: APPROVED.sha256  snapshot.yaml
site_builder/: approval.py  approve.py  build.py  candidates.py  config.py  inventory.py  links.py  models.py  projects.py  sync.py  tenure.py  update.py  validate.py
static/css/: cv.css  site.css
templates/: base.html.j2  bio.html.j2  cv.html.j2  home.html.j2  job_market.html.j2  research.html.j2
templates/partials/: media.html.j2  publication.html.j2
tests/: test_approval.py  test_build.py  test_candidates.py  test_config.py  test_content_contract.py  test_css_contract.py  test_models.py  test_privacy_contract.py  test_projects.py  test_sync.py  test_tenure.py  test_update.py  test_validate.py  test_workflow_contract.py
tests/fixtures/: job-market.sha256  model-profile.yaml  public-profile.yaml  tenure-log.md
tests/fixtures/projects/: hidden.md  visible.md
